--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,50 +1,82 @@
-set -g default-terminal "screen-256color"
-
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
-
-unbind %
-bind | split-window -h 
-
-unbind '"'
-bind - split-window -v
-
-unbind r
-bind r source-file ~/.tmux.conf
-
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
-
-bind -r m resize-pane -Z
-
+#-------------------------------------------------------#
+# Global Settings
+#-------------------------------------------------------#
 set -g mouse on
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+set-option -g focus-events on
+set  -g default-terminal "screen-256color"
+set -ag terminal-overrides ",screen-256color:RGB"
+set-option -sg escape-time 10
+set -g base-index 1
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+set -g status-keys vi
+set -g history-limit 10000
+setw -g mode-keys vi
+setw -g monitor-activity off
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+#-------------------------------------------------------#
 
-set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+#-------------------------------------------------------#
+# Binding keys
+#-------------------------------------------------------#
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind N new-window
+unbind p
+bind p paste-buffer
+bind-key | split-window -h
+bind-key _ split-window -h
+bind-key - split-window -v
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+bind-key + resize-pane -Z
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key e split-window -h "vim ~/.tmux.conf"
+bind -n End send-key C-e
+bind -n Home send-key C-a
+#-------------------------------------------------------#
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+#-------------------------------------------------------#
+#Status bar colours
+#-------------------------------------------------------#
+set -g @batt_icon_charge_tier8 '󰂂'
+set -g @batt_icon_charge_tier7 '󰂀'
+set -g @batt_icon_charge_tier6 '󰁿'
+set -g @batt_icon_charge_tier5 '󰁾'
+set -g @batt_icon_charge_tier4 '󰁽'
+set -g @batt_icon_charge_tier3 '󰁼'
+set -g @batt_icon_charge_tier2 '󰁻'
+set -g @batt_icon_charge_tier1 '󰁺'
+set -g @batt_icon_status_charged '󰁹'
+set -g @batt_icon_status_charging '󰂄'
+set -g @batt_icon_status_discharging '󰂃'
+set -g @batt_icon_status_attached '󰚥'
+set -g status-left " "
+set-option -g status-right '#{battery_percentage} #{battery_icon}  %A, %b %d  %I:%M %p'
+#set -g status-right ""
+set-option -g status-style bg=default
+#-------------------------------------------------------#
 
-# remove delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
+# border colours
+set -g pane-border-style fg=magenta
+set -g pane-active-border-style "bg=default fg=magenta"
 
-# tpm plugin
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+#set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# list of tmux plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-
-set -g @themepack 'powerline/default/cyan'
-
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
