--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,7 +12,7 @@
 set $mod Mod1
 set $psst --no-startup-id
 
-default_border pixel 2
+# default_border pixel 2
 for_window [all] title_window_icon off
 
 # Font for window titles. Will also be used by the bar unless a different font
