Adiciona keybinds para i3lock

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -146,6 +146,9 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Finish the session?' -B 'Yes' 'i3-msg exit'"
 
+# lock screen
+bindsym Ctrl+$mod+Delete exec "i3lock -c 000000 --ignore-empty-password --show-failed-attempts" 
+
 # using plasma's logout screen instead of i3's
 # bindsym $mod+Shift+e exec --no-startup-id qdbus-qt5 org.kde.ksmserver /KSMServer org.kde.KSMServerInterface.logout -1 -1 -1
 
