Adiciona o twmn como serviço de notificação

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -172,6 +172,7 @@ exec $psst  feh --recursive --bg-fill --randomize $HOME/Pictures/Wallpapers/
 exec_always $psst /usr/lib/polkit-kde-authentication-agent-1
 exec_always $psst autotiling
 exec_always $psst picom -c ~/.config/picom/picom.conf
+exec_always $psst twmnd 
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
