Remove o som de notificação no twmn

--- a/.config/twmn/twmn.conf
+++ b/.config/twmn/twmn.conf
@@ -80,4 +80,5 @@ host=127.0.0.1
 port=9797
 
 ; Program/command to play sound with.
-sound_command=vlc --intf dummy /usr/share/sounds/freedesktop/stereo/complete.oga vlc://quit
+; sound_command=vlc --intf dummy /usr/share/sounds/freedesktop/stereo/complete.oga vlc://quit
+sound_command=
