--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ for_window [all] title_window_icon off
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FiraCode NF 9
+font pango:FiraCode Nerd Font Propo 9
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
