--- a/.config/i3/config
+++ b/.config/i3/config
@@ -282,7 +282,7 @@ bar {
     status_command i3blocks
     position top
     height 22
-    separator_symbol "〈"
+    separator_symbol "|"
 
     # mode invisible
     colors {
