--- a/.config/i3/config
+++ b/.config/i3/config
@@ -147,6 +147,9 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# Resize and center floating windows
+bindsym $mod+y resize set 1024 px 800 px, move position center
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
