Configura as cores

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -303,5 +303,11 @@ bar {
 #  Colors
 ####################################################################
 
-# class                       border  backgr. text    indicator child_border
-client.focused                #f5535c #aa3941 #ffffff #ff9500  #aa3941
+# class                 border  bground text    indicator child_border
+client.focused          #AA3941 #AA3941 #FFFFFF #FF9500   #AA3941
+client.focused_inactive #333333 #333333 #FFFFFF #333333   #333333
+client.unfocused        #333333 #222222 #888888 #292D2E   #222222
+client.urgent           #900000 #900000 #FFFFFF #900000   #900000
+client.placeholder      #0C0C0C #0C0C0C #FFFFFF #000000   #0C0C0C
+
+client.background       #FFFFFF
