Remove transparencia de janelas inativas

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -3,6 +3,7 @@
 #################################
 shadow = true;
 shadow-exclude = [
+  "class_g = 'i3-frame'",
   "class_g = 'Firefox' && argb",
   "bounding_shaped",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
@@ -17,10 +18,11 @@ fading = false;
 #################################
 #   Transparency / Opacity      #
 #################################
-inactive-opacity = 0.9;
+inactive-opacity = 1.0;
 frame-opacity = 0.5;
 inactive-opacity-override = false;
 opacity-rule = [
+      "100:name = 'Picture in picture'",
       "80:class_g = 'i3bar'",
       "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
@@ -28,7 +30,7 @@ opacity-rule = [
 #################################
 #           Corners             #
 #################################
-corner-radius = 4
+corner-radius = 8
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
