--- a/.config/i3/config
+++ b/.config/i3/config
@@ -278,6 +278,24 @@ mode $mode_resize {
 
 bindsym $mod+r mode "resize"
 
+####################################################################
+#   Redshift mode
+####################################################################
+bindsym $mod+Shift+n mode "$mode_redshift"
+set $mode_redshift Set colour temperature: (a)uto, (r)eset, (2)500K, (3)000K, (4)000K, (5)000K
+set $kill_redshift pkill -9 redshift;
+mode "$mode_redshift" {
+    bindsym a exec $psst "$kill_redshift redshift -P -t 5000:4000", mode "default"
+    bindsym r exec $psst "$kill_redshift redshift -x", mode "default"
+    bindsym 2 exec $psst "$kill_redshift redshift -P -O 2500", mode "default"
+    bindsym 3 exec $psst "$kill_redshift redshift -P -O 3000", mode "default"
+    bindsym 4 exec $psst "$kill_redshift redshift -P -O 4000", mode "default"
+    bindsym 5 exec $psst "$kill_redshift redshift -P -O 5000", mode "default"
+ 
+    # exit mode: "Enter" or "Escape"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
 
 ####################################################################
 #   StatusBar
