--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,6 +32,7 @@ opacity-rule = [
 #################################
 corner-radius = 8
 rounded-corners-exclude = [
+  "class_g = 'Rofi'",
   "window_type = 'notification'",
   "window_type = 'dock'",
   "window_type = 'desktop'"
