--- a/.config/i3/config
+++ b/.config/i3/config
@@ -19,7 +19,7 @@ for_window [all] title_window_icon off
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FiraCode Nerd Font Propo 9
+font pango:Hack 9
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -56,10 +56,10 @@ bindsym $mod+Shift+c kill
 # bindsym $mod+p exec $psst dmenu_run -fn 'FiraCode-12' 
 # start launcher
 # bindsym $mod+p exec qdbus org.kde.krunner /App querySingleRunner applications ""
-bindsym $mod+p exec rofi -show drun -font "FiraCode Nerd Font Mono 10" -display-drun ""
+bindsym $mod+p exec rofi -show drun -font "Hack 9" -display-drun ""
 
 # switch between opened windows with rofi
-bindsym $mod+Tab exec rofi -show window -width 200 -hide-scrollbar -font "FiraCode Nerd Font Mono 10"
+bindsym $mod+Tab exec rofi -show window -width 200 -hide-scrollbar -font "Hack 9"
 
 # change focus
 # alternatively, you can use the cursor keys:
@@ -196,7 +196,6 @@ exec --no-startup-id nm-applet
 gaps inner 8
 gaps outer 0
 
-
 ####################################################################
 #   Floating Rules
 ####################################################################
@@ -308,12 +307,12 @@ bar {
 
     # mode invisible
     colors {
-        background #969696
-        statusline #000000
-        separator #000000
+        background #3e3e3e
+        statusline #ffffff
         # colorclass       <border> <background> <text>
-        focused_workspace  #969696  #000000     #FFFFFF
-        inactive_workspace #969696  #616161     #000000
+        focused_workspace  #000000  #000000     #FFFFFF
+        inactive_workspace #3e3e3e  #3e3e3e     #000000
+        active_workspace   #3e3e3e  #3e3e3e     #000000
 
     }
 }
