Muda a cor da letra no i3blocks

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -18,15 +18,15 @@ COMMAND_ON=redshift -P -O 2500 > /tmp/redshift.tmp
 COMMAND_OFF=redshift -x; rm -f /tmp/redshift.tmp
 COMMAND_STATUS=test -f /tmp/redshift.tmp
 COLOR_ON=#FFFF85
-COLOR_OFF=#000000
+COLOR_OFF=#FFFFFF
 
 [internet]
 command=~/.config/i3blocks/scripts/internet
 interval=60
 
 [nm-vpn]
-init_color=#000000
-on_color=#000000
+init_color=#FFFFFF
+on_color=#FFFFFF
 command=~/.config/i3blocks/scripts/nm-vpn
 label=󰖂  
 interval=5
@@ -38,15 +38,15 @@ interval=1
 signal=1
 LONG_FORMAT="${SYMB} ${VOL}"
 SHORT_FORMAT="${SYMB} ${VOL}"
-DEFAULT_COLOR="#000000"
-MUTED_COLOR="#000000"
+DEFAULT_COLOR="#FFFFFF"
+MUTED_COLOR="#FFFFFF"
 
 [arch-update]
 command=~/.config/i3blocks/scripts/arch-update
 interval=3600
 markup=pango
 UPDATE_COLOR=#FFFF85
-BASE_COLOR=#000000
+BASE_COLOR=#FFFFFF
 LABEL=  
 QUIET=true
 
@@ -56,7 +56,7 @@ markup=pango
 interval= 3600
 QUIET=true
 WATCH=^linux.* ^pacman.*
-BASE_COLOR=#000000
+BASE_COLOR=#FFFFFF
 UPDATE_COLOR=#FFFF85
 AUR_YAY=true
 LABEL= 
@@ -74,7 +74,7 @@ interval=5
 T_WARN=50
 T_CRIT=80
 DECIMALS=2
-COLOR_NORMAL=#000000
+COLOR_NORMAL=#FFFFFF
 COLOR_WARN=#FFFC00
 COLOR_CRIT=#FF0000
 
@@ -91,7 +91,7 @@ command=date +"%a %d %B %Y - %H:%M:%S "
 interval=1
 
 # [lockscreen]
-# command=i3-msg -q exec "i3lock -c 000000"
+# command=i3-msg -q exec "i3lock -c FFFFFF"
 # markup=pango
 # full_text=<span>⭘</span> 
 # separator=false
