--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -43,7 +43,7 @@ rounded-corners-exclude = [
 #     Background-Blurring       #
 #################################
 blur-kern = "3x3box";
-blur-method = "kawase";
+blur-method = "dual_kawase";
 blur-strength = 2;
 blur-background = true
 blur-background-frame = true
