Remove as sombras e bordas arredondadas no picom

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,9 +1,8 @@
 #################################
 #             Shadows           #
 #################################
-shadow = true;
+shadow = false;
 shadow-exclude = [
-  "class_g = 'i3-frame'",
   "class_g = 'Firefox' && argb",
   "bounding_shaped",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
@@ -23,14 +22,14 @@ frame-opacity = 0.5;
 inactive-opacity-override = false;
 opacity-rule = [
       "100:name = 'Picture in picture'",
-      "80:class_g = 'i3bar'",
+      "90:class_g = 'i3bar'",
       "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
 #################################
 #           Corners             #
 #################################
-corner-radius = 8
+corner-radius = 0
 rounded-corners-exclude = [
   "class_g = 'Rofi'",
   "window_type = 'notification'",
