Remove fading, transparency and shadow from picom

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,18 +11,23 @@ shadow-exclude = [
 #################################
 #           Fading              #
 #################################
-fading = false;
+fading = false
+fade-delta = 30
+fade-out-step = 0.15
+fade-in-step = 0.15
 
 
 #################################
 #   Transparency / Opacity      #
 #################################
 inactive-opacity = 1.0;
-frame-opacity = 0.5;
+frame-opacity = 1.0;
 inactive-opacity-override = false;
 opacity-rule = [
       "100:name = 'Picture in picture'",
+      "100:class_g = 'jetbrains-clion'",
       "90:class_g = 'i3bar'",
+      "100:name = 'Dunst'",
       "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
@@ -30,11 +35,12 @@ opacity-rule = [
 #           Corners             #
 #################################
 corner-radius = 0
+
 rounded-corners-exclude = [
   "class_g = 'Rofi'",
   "window_type = 'notification'",
   "window_type = 'dock'",
-  "window_type = 'desktop'"
+  "window_type = 'desktop'",
 ];
 
 
@@ -43,11 +49,12 @@ rounded-corners-exclude = [
 #################################
 blur-kern = "3x3box";
 blur-method = "dual_kawase";
-blur-strength = 2;
+blur-strength = 10;
 blur-background = true
 blur-background-frame = true
 blur-background-fixed = true
 blur-background-exclude = [
+  "window_type = 'notification'",
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
@@ -71,6 +78,6 @@ wintypes:
   tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 1; }
-  dropdown_menu = { opacity = 1; }
+  popup_menu = { opacity = 1; fade = false }
+  dropdown_menu = { opacity = 1; fade = false }
 };
