--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -54,10 +54,14 @@ blur-background = true
 blur-background-frame = true
 blur-background-fixed = true
 blur-background-exclude = [
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'",
   "window_type = 'notification'",
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
 ];
 
 #################################
