--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,10 +11,10 @@ shadow-exclude = [
 #################################
 #           Fading              #
 #################################
-fading = false
-fade-delta = 30
-fade-out-step = 0.15
-fade-in-step = 0.15
+fading = true
+fade-delta = 20
+fade-out-step = 0.10
+fade-in-step = 0.10
 
 
 #################################
