--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,7 +23,7 @@ for_window [all] title_window_icon off
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack 9
+font pango:Jetbrains Mono NL 9
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
