--- a/.config/i3/config
+++ b/.config/i3/config
@@ -314,8 +314,8 @@ bar {
 
     # mode invisible
     colors {
-        background #000000
-        statusline #FFFFFF
+        background #181E29
+        statusline #dddddd
         # colorclass       <border> <background> <text>
         # focused_workspace  #434343  #434343     #FFFFFF
         # inactive_workspace #000000  #000000     #FFFFFF
@@ -340,9 +340,13 @@ bar {
 # client.focused          #ffa202 #cb6d02 #FFFFFF #4C7899   #ffa202
 # Orange
 # client.focused          #fabd2f #fe8019 #282828 #b8bb26   #fabd2f
-client.focused_inactive #222222 #222222 #414141 #292D2E   #222222
-client.unfocused        #222222 #222222 #414141 #292D2E   #222222
-client.urgent           #AA3941 #AA3941 #FFFFFF #AA3941   #AA3941
-client.placeholder      #0C0C0C #0C0C0C #FFFFFF #000000   #0C0C0C
+# client.focused_inactive #222222 #222222 #414141 #292D2E   #222222
+# client.unfocused        #222222 #222222 #414141 #292D2E   #222222
+# client.urgent           #AA3941 #AA3941 #FFFFFF #AA3941   #AA3941
+# client.placeholder      #0C0C0C #0C0C0C #FFFFFF #000000   #0C0C0C
+# VSCode
+client.focused           #242D3E #1360A5 #ffffff #2e9ef4 #242D3E
+client.focused_inactive  #242D3E #313F56 #ffffff #2e9ef4 #242D3E
+client.unfocused         #333333 #212A39 #888888 #292d2e #222222
 
 client.background       #FFFFFF
