Use gruvbox hard theme on alacritty

--- a/.linux-tmux.conf
+++ b/.linux-tmux.conf
@@ -18,7 +18,6 @@ setw -g mode-keys vi
 setw -g monitor-activity off
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
-set -g status-position bottom
 #-------------------------------------------------------#
 
 
@@ -54,8 +53,10 @@ bind-key D detach
 #-------------------------------------------------------#
 #Status bar 
 #-------------------------------------------------------#
-set -g status-left "  [#S] "
-set-option -g status-right '%A, %b %d  %I:%M %p '
+set -g status-position top
+set -g status-left "#S - "
+set -g status-justify left 
+set-option -g status-right '%A, %b %d   %I:%M %p '
 #set -g status-right ""
 set-option -g status-style bg=default
 #-------------------------------------------------------#
