Adiciona regra para float windows do wine

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -207,6 +207,7 @@ exec --no-startup-id nm-applet
 ####################################################################
 
 # for_window [instance="keepassx"] floating enable
+for_window [title="Program Error*"] floating enable
 for_window [title="Seer Console*"] floating enable
 for_window [instance="pavucontrol"] floating enable
 for_window [title="Picture-in-Picture"] sticky enable 
