--- a/.linux-tmux.conf
+++ b/.linux-tmux.conf
@@ -53,7 +53,7 @@ bind-key D detach
 #-------------------------------------------------------#
 #Status bar 
 #-------------------------------------------------------#
-set -g status-position top
+set -g status-position bottom
 set -g status-left "#S - "
 set -g status-justify left 
 set-option -g status-right '%A, %b %d   %I:%M %p '
