--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,8 +23,8 @@ for_window [all] title_window_icon off
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font pango:Jetbrains Mono NL 12
-font pango:IosevkaTerm Nerd Font 14
+font pango:Jetbrains Mono NL 12
+# font pango:IosevkaTerm Nerd Font 12
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -192,6 +192,7 @@ exec_always $psst /usr/lib/polkit-kde-authentication-agent-1
 exec_always $psst autotiling
 exec_always $psst picom
 # exec_always $psst twmnd 
+exec $psst polybar i3 -r
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -201,8 +202,8 @@ exec --no-startup-id nm-applet
 ####################################################################
 #   Gaps
 ####################################################################
-# gaps inner 2
-# gaps outer 2
+gaps inner 7
+gaps outer 0
 
 ####################################################################
 #   Floating Rules
@@ -315,9 +316,9 @@ bar {
     position top
     # position bottom
     separator_symbol "󰇙"
-    # mode invisible
+    mode invisible
 
-    # mode invisible
+    # mode hide
     colors {
         background #000000
         statusline #dddddd
@@ -336,11 +337,11 @@ bar {
 
 # class                 border  bground text    indicator child_border
 # Black
-# client.focused          #434343 #434343 #FFFFFF #FFFFFF   #434343
+client.focused          #000000 #000000 #FFFFFF #FFFFFF   #000000
 # Cyan
 # client.focused          #4C7899 #4C7899 #FFFFFF #ffffff   #4C7899
 # Red
-client.focused          #AA3941 #AA3941 #FFFFFF #FF9500   #AA3941
+# client.focused          #AA3941 #AA3941 #FFFFFF #FF9500   #AA3941
 # Yealow
 # client.focused          #ffa202 #cb6d02 #FFFFFF #4C7899   #ffa202
 # Orange
