--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -28,11 +28,10 @@ disabled = #707880
 [bar/i3]
 width = 100%
 height = 20pt
-radius-top = 0
-radius-bottom = 0
+radius = 0
 bottom = false
 
-dpi = 80
+dpi = 90
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -41,19 +40,20 @@ line-size = 2pt
 
 border-size = 0pt
 border-color = #00000000
+; border-bottom-size = 4pt 
 
 padding-left = 0
 padding-right = 1
 
 module-margin = 1
 
-separator = |
+separator = ""
 separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono Nerd Font Mono;2
 
-modules-left = xworkspaces xwindow
-modules-right = vpn-anyconnect-status pulseaudio memory cpu date
+modules-left = xworkspaces
+modules-right = btc redshift vpn pulseaudio memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -109,7 +109,7 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
@@ -135,14 +135,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = "󰍛 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = "󰻠 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -164,21 +164,42 @@ interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
 [module/date]
+format-prefix = "󱛡 "
+format-prefix-foreground = ${colors.primary}
 type = internal/date
 interval = 1
 
-date = %H:%M
+date = %Y-%m-%d %H:%M:%S
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
-label-foreground = ${colors.primary}
 
-[module/vpn-anyconnect-status]
-format-prefix = "VPN "
+[module/vpn]
+format-prefix = "󰒃 "
 format-prefix-foreground = ${colors.primary}
 type = custom/script
 exec = ~/.config/polybar/scripts/vpnstatus.sh
+click-right = nmcli c down Mutant
+click-left = konsole -e "nmcli c up Mutant --ask"
 interval = 5
+
+[module/redshift]
+type = custom/script
+format-prefix = "󰥟 "  
+format-prefix-foreground = ${colors.primary}
+exec = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh temperature 
+click-left = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh toggle 
+scroll-up = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh increase
+scroll-down = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh decrease
+interval=0.5
+
+[module/btc]
+type = custom/script
+format-prefix = " "  
+format-prefix-foreground = ${colors.primary}
+exec = ~/.config/polybar/scripts/btc.sh btc
+click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3ABTCUSD
+interval=10
 
 [settings]
 screenchange-reload = true
