--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -53,7 +53,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono Nerd Font Mono;2
 
 modules-left = xworkspaces
-modules-right = btc redshift vpn pulseaudio memory cpu date
+modules-right = btc redshift vpn pulseaudio output memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -131,6 +131,7 @@ label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
+interval=0.5
 
 [module/memory]
 type = internal/memory
@@ -200,6 +201,12 @@ format-prefix-foreground = ${colors.primary}
 exec = ~/.config/polybar/scripts/btc.sh btc
 click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3ABTCUSD
 interval=10
+
+[module/output]
+type = custom/script
+exec = source ~/.config/polybar/scripts/toggle-headphone-env.sh && ~/.config/polybar/scripts/toggle-headphone.sh default
+click-left = source ~/.config/polybar/scripts/toggle-headphone-env.sh && ~/.config/polybar/scripts/toggle-headphone.sh toggle
+interval=0.5
 
 [settings]
 screenchange-reload = true
