--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -53,7 +53,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono Nerd Font Mono;2
 
 modules-left = xworkspaces
-modules-right = btc redshift vpn pulseaudio output memory cpu date
+modules-right = polypomo btc redshift vpn pulseaudio output memory cpu date poweroff
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -207,6 +207,22 @@ type = custom/script
 exec = source ~/.config/polybar/scripts/toggle-headphone-env.sh && ~/.config/polybar/scripts/toggle-headphone.sh default
 click-left = source ~/.config/polybar/scripts/toggle-headphone-env.sh && ~/.config/polybar/scripts/toggle-headphone.sh toggle
 interval=0.5
+
+[module/polypomo]
+type = custom/script
+
+exec = ~/.config/polybar/scripts/polypomo
+tail = true
+
+label = %output%
+click-left = ~/.config/polybar/scripts/polypomo toggle
+click-right = ~/.config/polybar/scripts/polypomo end
+click-middle = ~/.config/polybar/scripts/polypomo lock
+scroll-up = ~/.config/polybar/scripts/polypomo time +60
+scroll-down = ~/.config/polybar/scripts/polypomo time -60
+
+font-0 = fixed:pixelsize=10;1
+font-1 = Noto Emoji:scale=15:antialias=false;0
 
 [settings]
 screenchange-reload = true
