Atualiza a polybar para utilizar os workspace do i3-wm

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -73,17 +73,17 @@ format-margin = 8pt
 tray-spacing = 16pt
 
 [module/xworkspaces]
-type = internal/xworkspaces
+type = internal/i3
 
-label-active = %name%
+label-active = %index%
 label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.primary}
 label-active-padding = 1
 
-label-occupied = %name%
+label-occupied = %index%
 label-occupied-padding = 1
 
-label-urgent = %name%
+label-urgent = %index%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
