--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -224,6 +224,57 @@ scroll-down = ~/.config/polybar/scripts/polypomo time -60
 font-0 = fixed:pixelsize=10;1
 font-1 = Noto Emoji:scale=15:antialias=false;0
 
+[module/poweroff]
+type = custom/menu
+
+expand-right = true
+
+format-spacing = 1
+
+label-open = "⭘"
+label-open-foreground = ${colors.primary}
+label-close = 
+label-close-foreground = ${colors.success}
+label-separator = 
+label-separator-foreground = ${colors.foreground}
+
+;Powermenu
+menu-0-0 = ""
+menu-0-0-exec = menu-open-1
+menu-0-0-foreground = ${colors.urgent}
+
+menu-0-1 = ""
+menu-0-1-exec = menu-open-2
+menu-0-1-foreground = ${colors.urgent}
+
+menu-0-2 = ""
+menu-0-2-exec = menu-open-3
+menu-0-2-foreground = ${colors.warning}
+
+;Reboot
+menu-1-0 = "Cancel "
+menu-1-0-exec = menu-open-0
+menu-1-0-foreground = ${colors.success}
+menu-1-1 = "Reboot"
+menu-1-1-exec = systemctl reboot
+menu-1-1-foreground = ${colors.urgent}
+
+;Shutdown
+menu-2-0 = "Power off"
+menu-2-0-exec = systemctl poweroff
+menu-2-0-foreground = ${colors.urgent}
+menu-2-1 = "Cancel "
+menu-2-1-exec = menu-open-0
+menu-2-1-foreground = ${colors.success}
+
+;Hibernate
+menu-3-0 = "Hibernate "
+menu-3-0-exec = systemctl hibernate
+menu-3-0-foreground = ${colors.urgent}
+menu-3-1 = "Cancel"
+menu-3-1-exec = menu-open-0
+menu-3-1-foreground = ${colors.success}
+
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
