--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -87,9 +87,18 @@ label-urgent = %index%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = %name%
+label-empty = %index%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
+
+label-focused = %index%
+label-focused-foreground = #ffffff
+; label-focused-background = #3f3f3f
+label-focused-underline = #fba922
+label-focused-padding = 1
+
+label-unfocused = %index%
+label-unfocused-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
